@@ -1,0 +1,36 @@
+/*
+ * Copyright 2008 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package demo.org.powermock.examples.easymock31;
+
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
+
+public class Logger {
+	private PrintWriter writer;
+
+    public Logger() {
+        try {
+			writer = new PrintWriter(new FileWriter("target/logger.log"));
+		} catch (IOException e) {
+			throw new IllegalStateException(e);
+		}
+    }
+
+    public void log(String message) {
+    	writer.println(message);
+    }
+}
